--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>auro_assignment</name>
   <version>0.0.0</version>
-  <description>The auro_assignment package</description>
+  <description>lidar calibration package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
